--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -10449,6 +10449,14 @@ ul.bb-albums-list .bb-more-photos strong {
   right: 102px;
 }
 
+img.emoji,
+img.emojioneemoji {
+  display: inline-block;
+  margin: 3px;
+  width: 24px !important;
+  height: 24px !important;
+}
+
 /**
 *-------------------------------------------------------------------------------
 * @section 15.0 - Media Dropzone
