CSS updated to make “Signup” fields stand out more
-Needed because I removed dashed border, which showed before that field could not be moved

--- a/src/bp-xprofile/admin/css/admin-rtl.css
+++ b/src/bp-xprofile/admin/css/admin-rtl.css
@@ -205,6 +205,11 @@ fieldset div.field-wrapper {
 	padding: 29px 14px 14px;
 }
 
+fieldset span.bp-signup-field-label {
+	color: #5A9758;
+	font-weight: 500;
+}
+
 fieldset span.bp-required-field-label {
 	color: #999;
 }
