--- a/src/bp-xprofile/admin/css/admin-rtl.css
+++ b/src/bp-xprofile/admin/css/admin-rtl.css
@@ -169,8 +169,7 @@ div.field-group {
 
 .field-group fieldset {
 	position: relative;
-	border-width: 1px;
-	border-color: #d2d2d2;
+	border: 1px solid #d2d2d2;
 	background-color: #fafafa;
 	margin: 20px 0 0;
 	padding: 10px 0 0;
@@ -179,12 +178,10 @@ div.field-group {
 
 .field-group fieldset.sortable {
 	cursor: move;
-	border-style: solid;
 	box-shadow: 0 1px 0 #d2d2d2;
 }
 
 .field-group fieldset.core {
-	border-style: dashed;
 	background-color: #fff;
 }
 
@@ -208,6 +205,11 @@ fieldset div.field-wrapper {
 	padding: 29px 14px 14px;
 }
 
+fieldset span.bp-signup-field-label {
+	color: #5A9758;
+	font-weight: 500;
+}
+
 fieldset span.bp-required-field-label {
 	color: #999;
 }
@@ -223,7 +225,7 @@ fieldset span.bp-required-field-label {
 	float: none;
 }
 
-.field-group fieldset:not(.core):hover {
+.field-group fieldset:hover {
 	border-color: #999;
 }
 
