T:1182 - formatting for H3 in admin cards

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -375,6 +375,12 @@ tr.bp-search-parent-field label {
 	margin-right: 15px;
 }
 
+.bp-admin-card h3 {
+	font-size: 19px;
+	font-weight: 600;
+}
+
+
 /* Settings */
 .bp-admin-card.section-bp_main h2:before {
 	background-image: url(../../images/admin/icons/fontawesome/solid/tools.svg);
