--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -5296,7 +5296,7 @@ button[data-bp-close]:hover {
   content: "\f468";
 }
 
-#pass-strength-result {
+#pass-strength-result, #email-validate-result {
   background-color: #eee;
   border-color: #ddd;
   border-style: solid;
@@ -5309,17 +5309,17 @@ button[data-bp-close]:hover {
   width: auto;
 }
 
-#pass-strength-result.show {
+#pass-strength-result.show, #email-validate-result.show {
   display: block;
 }
 
-#pass-strength-result.mismatch {
+#pass-strength-result.mismatch, #email-validate-result.mismatch {
   background-color: #333;
   border-color: transparent;
   color: #fff;
 }
 
-#pass-strength-result.error, #pass-strength-result.bad {
+#pass-strength-result.error, #pass-strength-result.bad, #email-validate-result.error {
   background-color: #ffb78c;
   border-color: #ff853c;
   color: #fff;
