--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -1592,6 +1592,38 @@ td label.platform-activity {
   margin-top: 0;
 }
 
+.loader {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-left: 4px solid #008000;
+  border-right: 4px solid #FF0000;
+  border-bottom: 4px solid #FFC0CB;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  animation: spin 2s linear infinite;
+  display: inline-block;
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(-360deg);
+  }
+}
+
+body .section-repair_community .settings fieldset .submit a.disable-btn {
+  pointer-events: none;
+}
+
+body .section-repair_community .settings fieldset .checkbox label code {
+  margin-right: 10px;
+}
+
 @media screen and (max-width: 782px) {
   .bb-nickname-hide-last-name {
     margin-top: -2px;
