--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1659,6 +1659,34 @@ td label.platform-activity {
 	}
 }
 
+.loader {
+	border: 4px solid #f3f3f3;
+	border-top: 4px solid #3498db;
+	border-right: 4px solid #008000;
+	border-left: 4px solid #FF0000;
+	border-bottom: 4px solid #FFC0CB;
+	border-radius: 50%;
+	width: 10px;
+	height: 10px;
+	animation: spin 2s linear infinite;
+	display: inline-block;
+	margin-left: 8px;
+	vertical-align: middle;
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
+
+body .section-repair_community .settings fieldset .submit a.disable-btn {
+	pointer-events: none;
+}
+
+body .section-repair_community .settings fieldset .checkbox label code {
+	margin-left: 10px;
+}
+
 @media screen and (max-width: 782px) {
 
 	.bb-nickname-hide-last-name {
