change loader class to more generic name

--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1659,7 +1659,7 @@ td label.platform-activity {
 	}
 }
 
-.loader {
+.loader-repair-tools {
 	border: 4px solid #f3f3f3;
 	border-top: 4px solid #3498db;
 	border-right: 4px solid #008000;
