--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -1592,7 +1592,7 @@ td label.platform-activity {
   margin-top: 0;
 }
 
-.loader {
+.loader-repair-tools {
   border: 4px solid #f3f3f3;
   border-top: 4px solid #3498db;
   border-right: 4px solid #008000;
