#112 - lazy load animation added.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -589,3 +589,21 @@
 .acomment-content .buddyboss-media-photo-link {
 	display: none !important;
 }
+@keyframes lazyAmination{
+    0%{
+        background-position: 100% 0
+    }
+    100%{
+        background-position: -300% 0
+    }
+}
+.activity-inner iframe.lazy{
+	animation-duration: 1.3s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: lazyAmination;
+    animation-timing-function: linear;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+    background-size: 800px 104px;
+}
