#112 - lazy load animation background color changed.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -604,6 +604,6 @@
     animation-name: lazyAmination;
     animation-timing-function: linear;
     background: #f6f7f8;
-    background: linear-gradient(to right, #eeeeee 8%, #dddddd 18%, #eeeeee 33%);
+    background: linear-gradient(to right, #faf9f7 8%, #f3efef 18%, #faf9f7 33%);
     background-size: 800px 104px;
 }
