#T1170 change tagify to select2

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forums.scss
@@ -1166,7 +1166,7 @@ fieldset div.avatar {
 	}
 }
 
-.bbp-reply-form .bbp_topic_tags_wrapper .select2-search__field, .bbp-topic-form .bbp_topic_tags_wrapper .select2-search__field {
+.bbp-reply-form .bbp_topic_tags_wrapper .select2-search__field, .bbp-topic-form .bbp_topic_tags_wrapper .select2-search__field, .bbpress .bbp_topic_tags_wrapper .select2-search__field, .forum .bbp_topic_tags_wrapper .select2-search__field {
 	background: transparent;
 	border-width: 0;
 	min-width: 100%;
@@ -1174,7 +1174,7 @@ fieldset div.avatar {
 	padding-left: 0;
 }
 
-.bbp-reply-form span.select2-dropdown.select2-dropdown--above, .bbp-topic-form span.select2-dropdown.select2-dropdown--above{
+.bbp-reply-form span.select2-dropdown.select2-dropdown--above, .bbp-topic-form span.select2-dropdown.select2-dropdown--above, .bbpress span.select2-dropdown.select2-dropdown--above, .forum span.select2-dropdown.select2-dropdown--above {
 	background: #fff;
 	box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
 	border-radius: 4px;
@@ -1184,7 +1184,7 @@ fieldset div.avatar {
 	max-width: 300px;
 }
 
-.bbp-reply-form li.select2-results__option.select2-results__message, .bbp-topic-form li.select2-results__option.select2-results__message {
+.bbp-reply-form li.select2-results__option.select2-results__message, .bbp-topic-form li.select2-results__option.select2-results__message, .bbpress li.select2-results__option.select2-results__message, .forum li.select2-results__option.select2-results__message {
 	border-radius: 3px;
 	margin-bottom: 0;
 	font-size: 14px;
@@ -1192,12 +1192,12 @@ fieldset div.avatar {
 
 }
 
-.bbp-reply-form li.select2-search.select2-search--inline, .bbp-topic-form li.select2-search.select2-search--inline {
+.bbp-reply-form li.select2-search.select2-search--inline, .bbp-topic-form li.select2-search.select2-search--inline, .bbpress li.select2-search.select2-search--inline, .forum li.select2-search.select2-search--inline {
 	flex: 1;
 	min-width: 0;
 }
 
-.bbp-reply-form ul.select2-selection__rendered, .bbp-topic-form ul.select2-selection__rendered {
+.bbp-reply-form ul.select2-selection__rendered, .bbp-topic-form ul.select2-selection__rendered, ul.select2-selection__rendered, .forum ul.select2-selection__rendered, ul.select2-selection__rendered, .bbpress ul.select2-selection__rendered, ul.select2-selection__rendered {
 	display: flex !important;
 	align-items: center;
 	flex-flow: row wrap;
@@ -1206,19 +1206,19 @@ fieldset div.avatar {
 
 
 
-.single-item.forum span.select2-selection.select2-selection--multiple, .forum.single-forum span.select2-selection.select2-selection--multiple {
+.single-item.forum span.select2-selection.select2-selection--multiple, .forum.single-forum span.select2-selection.select2-selection--multiple, .bbpress span.select2-selection.select2-selection--multiple {
 	border-color: transparent;
 	padding: 0;
 }
 
-.single-item.forum li.select2-results__option.select2-results__message, .forum.single-forum li.select2-results__option.select2-results__message{
+.single-item.forum li.select2-results__option.select2-results__message, .forum.single-forum li.select2-results__option.select2-results__message, .bbpress li.select2-results__option.select2-results__message{
 	border-radius: 3px;
 	margin-bottom: 0;
 	font-size: 14px;
 	padding: 2px 5px;
 }
 
-.single-item.forum span.select2-dropdown.select2-dropdown--above, .forum.single-forum span.select2-dropdown.select2-dropdown--above {
+.single-item.forum span.select2-dropdown.select2-dropdown--above, .forum.single-forum span.select2-dropdown.select2-dropdown--above, .bbpress span.select2-dropdown.select2-dropdown--above {
 	background: #fff;
 	box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
 	border-radius: 4px;
@@ -1228,7 +1228,7 @@ fieldset div.avatar {
 	max-width: 300px;
 }
 
-.bbp-reply-form li.select2-selection__choice, .bbp-topic-form li.select2-selection__choice {
+.bbp-reply-form li.select2-selection__choice, .bbp-topic-form li.select2-selection__choice, .forum li.select2-selection__choice, .bbpress li.select2-selection__choice {
 	background-color: #4D5C6D !important;
 	border-color: #4D5C6D !important;
 	font-size: 14px;
@@ -1247,13 +1247,13 @@ fieldset div.avatar {
 	margin: 0;
 }
 
-.bbp-reply-form span.select2-selection__choice__remove, .bbp-topic-form span.select2-selection__choice__remove {
+.bbp-reply-form span.select2-selection__choice__remove, .bbp-topic-form span.select2-selection__choice__remove, .bbpress span.select2-selection__choice__remove, .forum span.select2-selection__choice__remove {
 	font-size: 0;
 	line-height: 1;
 	margin: 0 0 0 8px;
 }
 
-.bbp-reply-form span.select2-selection__choice__remove:before, .bbp-topic-form span.select2-selection__choice__remove:before {
+.bbp-reply-form span.select2-selection__choice__remove:before, .bbp-topic-form span.select2-selection__choice__remove:before, .bbpress span.select2-selection__choice__remove:before, .forum span.select2-selection__choice__remove:before {
 	content: '\E828';
 	font-family: "bb-icons";
 	font-size: 13px;
@@ -1275,4 +1275,19 @@ fieldset div.avatar {
 	text-indent: 0px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+.bbpress span.select2-dropdown.select2-dropdown--below, .forum span.select2-dropdown.select2-dropdown--below {
+	background: #fff;
+	box-shadow: 0 2px 7px 1px rgba(0, 0, 0, 0.05), 0 6px 32px 0 rgba(18, 43, 70, 0.1);
+	border-radius: 4px;
+	border: 0;
+	padding: 5px 10px;
+	margin-right: 0;
+	max-width: 300px;
+}
+
+.bbpress input.select2-search__field, .forum input.select2-search__field{
+	margin: 0 !important;
+	padding: 0 12px !important;
 }
