TR-1412 - Issue: when Akismet is activated, the red flag Spam in comments is misaligned.

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_activity_entries.scss
@@ -325,6 +325,10 @@
 				content: "\f153";
 			}
 
+			.spam-activity:before {
+				content: "\f227";
+			}
+
 			.delete-activity:hover {
 				color: #800;
 			}
