--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1629,6 +1629,10 @@ input.search-query-input {
   content: "\f153";
 }
 
+.activity-list .activity-item .bp-generic-meta.action .spam-activity:before {
+  content: "\f227";
+}
+
 .activity-list .activity-item .bp-generic-meta.action .delete-activity:hover {
   color: #800;
 }
