--- a/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_tooltips.scss
@@ -80,7 +80,7 @@ button[data-bp-tooltip] {
 	// Fixing iOS Safari event issue. More info at: https://goo.gl/w8JF4W
 	cursor: pointer;
 
-	&:after {
+	&::after {
 
 		@include base-effects();
 		@include normalized-text();
@@ -97,7 +97,7 @@ button[data-bp-tooltip] {
 		z-index: 10;
 	}
 
-	&:before {
+	&::before {
 
 		@include svg-arrow($tooltip-background);
 		@include base-effects();
@@ -110,8 +110,8 @@ button[data-bp-tooltip] {
 	&:hover,
 	&[data-bp-tooltip-visible] {
 
-		&:before,
-		&:after {
+		&::before,
+		&::after {
 
 			@include opacity(1);
 
@@ -119,21 +119,17 @@ button[data-bp-tooltip] {
 		}
 	}
 
-	&.font-awesome:after {
-		font-family: FontAwesome;
-	}
-
 	&[data-bp-tooltip-break] {
 
-		&:after {
+		&::after {
 			white-space: pre;
 		}
 	}
 
 	&[data-bp-tooltip-blunt] {
 
-		&:before,
-		&:after {
+		&::before,
+		&::after {
 
 			@include no-effects();
 		}
@@ -141,7 +137,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-pos="up"] {
 
-		&:after {
+		&::after {
 			bottom: 100%;
 			left: 50%;
 			margin-bottom: 5px + $tooltip-arrow-height;
@@ -150,7 +146,7 @@ button[data-bp-tooltip] {
 			@include transform-origin(top);
 		}
 
-		&:before {
+		&::before {
 			bottom: 100%;
 			left: 50%;
 			margin-bottom: 5px;
@@ -162,12 +158,12 @@ button[data-bp-tooltip] {
 		&:hover,
 		&[data-bp-tooltip-visible] {
 
-			&:after {
+			&::after {
 
 				@include transform(translate(-50%, 0));
 			}
 
-			&:before {
+			&::before {
 
 				@include transform(translate(-50%, 0));
 			}
@@ -176,7 +172,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-pos="up-left"] {
 
-		&:after {
+		&::after {
 			bottom: 100%;
 			left: 0;
 			margin-bottom: 5px + $tooltip-arrow-height;
@@ -185,7 +181,7 @@ button[data-bp-tooltip] {
 			@include transform-origin(top);
 		}
 
-		&:before {
+		&::before {
 			bottom: 100%;
 			left: 5px;
 			margin-bottom: 5px;
@@ -197,12 +193,12 @@ button[data-bp-tooltip] {
 		&:hover,
 		&[data-bp-tooltip-visible] {
 
-			&:after {
+			&::after {
 
 				@include transform(translate(0, 0));
 			}
 
-			&:before {
+			&::before {
 
 				@include transform(translate(0, 0));
 			}
@@ -211,7 +207,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-pos="up-right"] {
 
-		&:after {
+		&::after {
 			bottom: 100%;
 			right: 0;
 			margin-bottom: 5px + $tooltip-arrow-height;
@@ -220,7 +216,7 @@ button[data-bp-tooltip] {
 			@include transform-origin(top);
 		}
 
-		&:before {
+		&::before {
 			bottom: 100%;
 			right: 5px;
 			margin-bottom: 5px;
@@ -232,12 +228,12 @@ button[data-bp-tooltip] {
 		&:hover,
 		&[data-bp-tooltip-visible] {
 
-			&:after {
+			&::after {
 
 				@include transform(translate(0, 0));
 			}
 
-			&:before {
+			&::before {
 
 				@include transform(translate(0, 0));
 			}
@@ -246,7 +242,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-pos="down"] {
 
-		&:after {
+		&::after {
 			left: 50%;
 			margin-top: 5px + $tooltip-arrow-height;
 			top: 100%;
@@ -254,7 +250,7 @@ button[data-bp-tooltip] {
 			@include transform(translate(-50%, -10px));
 		}
 
-		&:before {
+		&::before {
 			left: 50%;
 			margin-top: 5px;
 			top: 100%;
@@ -266,12 +262,12 @@ button[data-bp-tooltip] {
 		&:hover,
 		&[data-bp-tooltip-visible] {
 
-			&:after {
+			&::after {
 
 				@include transform(translate(-50%, 0));
 			}
 
-			&:before {
+			&::before {
 
 				@include transform(translate(-50%, 0));
 			}
@@ -280,7 +276,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-pos="down-left"] {
 
-		&:after {
+		&::after {
 			left: 0;
 			margin-top: 5px + $tooltip-arrow-height;
 			top: 100%;
@@ -288,7 +284,7 @@ button[data-bp-tooltip] {
 			@include transform(translate(0, -10px));
 		}
 
-		&:before {
+		&::before {
 			left: 5px;
 			margin-top: 5px;
 			top: 100%;
@@ -300,12 +296,12 @@ button[data-bp-tooltip] {
 		&:hover,
 		&[data-bp-tooltip-visible] {
 
-			&:after {
+			&::after {
 
 				@include transform(translate(0, 0));
 			}
 
-			&:before {
+			&::before {
 
 				@include transform(translate(0, 0));
 			}
@@ -314,7 +310,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-pos="down-right"] {
 
-		&:after {
+		&::after {
 			right: 0;
 			margin-top: 5px + $tooltip-arrow-height;
 			top: 100%;
@@ -322,7 +318,7 @@ button[data-bp-tooltip] {
 			@include transform(translate(0, -10px));
 		}
 
-		&:before {
+		&::before {
 			right: 5px;
 			margin-top: 5px;
 			top: 100%;
@@ -334,12 +330,12 @@ button[data-bp-tooltip] {
 		&:hover,
 		&[data-bp-tooltip-visible] {
 
-			&:after {
+			&::after {
 
 				@include transform(translate(0, 0));
 			}
 
-			&:before {
+			&::before {
 
 				@include transform(translate(0, 0));
 			}
@@ -348,7 +344,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-pos="left"] {
 
-		&:after {
+		&::after {
 			margin-right: 5px + $tooltip-arrow-height;
 			right: 100%;
 			top: 50%;
@@ -356,7 +352,7 @@ button[data-bp-tooltip] {
 			@include transform(translate(10px, -50%));
 		}
 
-		&:before {
+		&::before {
 			margin-right: 5px;
 			right: 100%;
 			top: 50%;
@@ -368,12 +364,12 @@ button[data-bp-tooltip] {
 		&:hover,
 		&[data-bp-tooltip-visible] {
 
-			&:after {
+			&::after {
 
 				@include transform(translate(0, -50%));
 			}
 
-			&:before {
+			&::before {
 
 				@include transform(translate(0, -50%));
 			}
@@ -382,7 +378,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-pos="right"] {
 
-		&:after {
+		&::after {
 			left: 100%;
 			margin-left: 5px + $tooltip-arrow-height;
 			top: 50%;
@@ -390,7 +386,7 @@ button[data-bp-tooltip] {
 			@include transform(translate(-10px, -50%));
 		}
 
-		&:before {
+		&::before {
 			left: 100%;
 			margin-left: 5px;
 			top: 50%;
@@ -402,12 +398,12 @@ button[data-bp-tooltip] {
 		&:hover,
 		&[data-bp-tooltip-visible] {
 
-			&:after {
+			&::after {
 
 				@include transform(translate(0, -50%));
 			}
 
-			&:before {
+			&::before {
 
 				@include transform(translate(0, -50%));
 			}
@@ -416,7 +412,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-length="small"] {
 
-		&:after {
+		&::after {
 			white-space: normal;
 			width: 80px;
 		}
@@ -424,7 +420,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-length="medium"] {
 
-		&:after {
+		&::after {
 			white-space: normal;
 			width: 150px;
 		}
@@ -432,7 +428,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-length="large"] {
 
-		&:after {
+		&::after {
 			white-space: normal;
 			width: 260px;
 		}
@@ -440,7 +436,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-length="xlarge"] {
 
-		&:after {
+		&::after {
 			white-space: normal;
 			width: 380px;
 
@@ -453,7 +449,7 @@ button[data-bp-tooltip] {
 
 	&[data-bp-tooltip-length="fit"] {
 
-		&:after {
+		&::after {
 			white-space: normal;
 			width: 100%;
 		}
