--- a/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_user_profile.scss
@@ -24,12 +24,20 @@
 		}
 	}
 
-}
+	.field-visibility-settings,
+	.field-visibility-settings-header {
+		color: $light-text-plus;
+	}
 
-// Edit Screen
+	.field-visibility-settings {
+		margin: $marg-sml 0;
 
-.buddypress-wrap {
+		fieldset {
+			margin: $marg-xsml 0;
+		}
+	}
 
+	// Edit Screen
 	.profile.edit {
 
 		// The groups tabs
@@ -44,25 +52,6 @@
 				a {
 
 					@include font-size(18);
-				}
-			}
-		}
-
-		.editfield {
-			background: $off-white;
-			border: 1px solid $bp-border-color;
-			margin: $marg-med 0;
-			padding: $pad-med;
-
-			fieldset {
-				border: 0;
-
-				label {
-					font-weight: 400;
-
-					&.xprofile-field-label {
-						display: inline;
-					}
 				}
 			}
 		}
@@ -100,6 +89,10 @@
 		.editfield {
 			display: flex;
 			flex-direction: column;
+			background: $off-white;
+			border: 1px solid $bp-border-color;
+			margin: $marg-med 0;
+			padding: $pad-med;
 
 			legend {
 				margin-bottom: $marg-sml;
@@ -109,6 +102,18 @@
 				margin-top: -$marg-sml;
 				margin-bottom: $marg-sml;
 				order: 2;
+			}
+
+			fieldset {
+				border: 0;
+
+				label {
+					font-weight: 400;
+
+					&.xprofile-field-label {
+						display: inline;
+					}
+				}
 			}
 
 			> fieldset {
@@ -122,7 +127,109 @@
 		}
 
 	} // .profile
-} // close .buddypress-wrap
+
+	.current-visibility-level {
+		font-style: normal;
+		color: #333;
+	}
+
+	.standard-form { // this needs to be a specific profile edit form class
+
+		.editfield {
+
+			fieldset {
+				margin: 0;
+			}
+		}
+
+		.field-visibility-settings {
+
+			label {
+				font-weight: 400;
+				margin: 0;
+			}
+
+			legend {
+				font-style: italic;
+			}
+
+			.radio {
+				list-style: none;
+				margin-bottom: 0;
+			}
+
+			.field-visibility-settings-close {
+
+				@include font-size(12);
+			}
+
+			legend,
+			label {
+
+				@include font-size(14);
+			}
+		}
+
+		.wp-editor-container {
+			border: 1px solid #dedede;
+
+			textarea {
+				background: $white;
+				width: 100%;
+			}
+		}
+
+		// field item description
+		.description {
+			font-size: inherit;
+		}
+
+		.field-visibility-settings-header {
+			font-style: italic;
+		}
+
+		.field-visibility-settings-header {
+
+			@include font-size(14);
+			margin: 5px 0;
+		}
+
+		.field-visibility select {
+			margin: 0;
+		}
+
+	} // close .standard-form
+
+	.html-active button.switch-html {
+		background: #f5f5f5;
+		border-bottom-color: transparent;
+		border-bottom-left-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+
+	.tmce-active button.switch-tmce {
+		background: #f5f5f5;
+		border-bottom-color: transparent;
+		border-bottom-left-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+
+	// Public Profile
+	.profile.public {
+
+		.profile-group-title {
+			border-bottom: 1px solid $bp-border-dark;
+		}
+	}
+
+	// Avatars & Cover Photo
+	.profile {
+
+		.bp-avatar-nav {
+			margin-top: $marg-lrg;
+		}
+	}
+}
 
 #btn_add_repeater_set {
 	align-items: center;
@@ -146,139 +253,9 @@ body.no-js {
 	}
 }
 
-.buddypress-wrap {
-
-	.field-visibility-settings {
-		margin: $marg-sml 0;
-	}
-
-	.current-visibility-level {
-		font-style: normal;
-		color: #333;
-	}
-
-	.field-visibility-settings,
-	.field-visibility-settings-header {
-		color: $light-text-plus;
-	}
-
-	.field-visibility-settings {
-
-		fieldset {
-			margin: $marg-xsml 0;
-		}
-	}
-
-	.standard-form { // this needs to be a specific profile edit form class
-
-		.editfield {
-
-			fieldset {
-				margin: 0;
-			}
-		}
-
-		.field-visibility-settings {
-
-			label {
-				font-weight: 400;
-				margin: 0;
-			}
-
-			.radio {
-				list-style: none;
-				margin-bottom: 0;
-			}
-
-			.field-visibility-settings-close {
-
-				@include font-size(12);
-			}
-		}
-
-		.wp-editor-container {
-			border: 1px solid #dedede;
-
-			textarea {
-				background: $white;
-				width: 100%;
-			}
-		}
-
-		// field item description
-		.description {
-			font-size: inherit;
-		}
-
-		.field-visibility-settings legend,
-		.field-visibility-settings-header {
-			font-style: italic;
-		}
-
-		.field-visibility-settings-header {
-
-			@include font-size(14);
-			margin: 5px 0;
-		}
-
-		.field-visibility-settings {
-
-			legend,
-			label {
-
-				@include font-size(14);
-			}
-		}
-
-		.field-visibility select {
-			margin: 0;
-		}
-
-	} // close .standard-form
-
-	.html-active button.switch-html {
-		background: #f5f5f5;
-		border-bottom-color: transparent;
-		border-bottom-left-radius: 0;
-		border-bottom-right-radius: 0;
-	}
-
-	.tmce-active button.switch-tmce {
-		background: #f5f5f5;
-		border-bottom-color: transparent;
-		border-bottom-left-radius: 0;
-		border-bottom-right-radius: 0;
-	}
-
-} // close .buddypress-wrap
-
-// Public Profile
-
-.buddypress-wrap {
-
-	.profile.public {
-
-		.profile-group-title {
-			border-bottom: 1px solid $bp-border-dark;
-		}
-	}
-}
-
 // This needs to be reviewed and re-located!?
 body.register .buddypress-wrap .page ul {
 	list-style: none;
-}
-
-// Avatars & Cover Photo
-
-.buddypress-wrap {
-
-	.profile {
-
-		.bp-avatar-nav {
-			margin-top: $marg-lrg;
-		}
-	}
 }
 
 #item-header a.link-change-cover-image,
