--- a/src/bp-integrations/learndash/assets/styles/bp-learndash.css
+++ b/src/bp-integrations/learndash/assets/styles/bp-learndash.css
@@ -180,8 +180,9 @@ table.dataTable tbody tr, table.dataTable.display tbody tr.odd>.sorting_1, table
 	background-color: #ffffff !important;
 }
 
-table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
-	border-top: 0px solid #ddd;
+#admin-show-all tbody tr td span img {
+	vertical-align: middle;
+	margin-right: 10px;
 }
 
 .bp_ld_report_table_wrapper >h2 {
