--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1192,6 +1192,10 @@ body.post-type-bp-email .categorydiv label {
 		border-bottom: 1px solid #eaeaea;
 	}
 
+	th:first-child {
+		width: 40%;
+	}
+
 	th,
 	td {
 		padding: 10px 12px;
