--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1192,10 +1192,6 @@ body.post-type-bp-email .categorydiv label {
 		border-bottom: 1px solid #eaeaea;
 	}
 
-	th:first-child {
-		width: 40%;
-	}
-
 	th,
 	td {
 		padding: 10px 12px;
@@ -1245,6 +1241,10 @@ body.post-type-bp-email .categorydiv label {
 		flex: 1;
 		min-width: 0;
 	}
+
+	.bp-help-content th:first-child {
+		width: 40%;
+	}
 }
 
 @media screen and (max-width: 781px) {
@@ -1269,6 +1269,10 @@ body.post-type-bp-email .categorydiv label {
 	.bp-help-content {
 		padding: 2.5em;
 		width: 100%;
+	}
+
+	.bp-help-content th:last-child {
+		display: none;
 	}
 }
 
