--- a/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_forms.scss
@@ -416,3 +416,34 @@ body.no-js {
 		}
 	}
 }
+
+// Style the stats
+ul.bbp-stats {
+	display: flex;
+	flex-flow: row wrap;
+	list-style: none;
+	padding: 0;
+	margin: 40px -20px;
+        width: auto;
+
+	li {
+		padding: 0 20px;
+		text-align: center;
+		margin-bottom: 40px;
+		flex: 0 0 50%;
+
+                @include medium-up() {
+			flex: 0 0 25%;
+                }
+	}
+
+	h4 {
+		font-size: 18px;
+		font-weight: 400;
+		margin-bottom: 10px;
+	}
+
+	.bbp-count {
+		font-size: 30px;
+	}
+}
