T1453 - add photos model style fixes

--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -319,7 +319,7 @@ tr.bp-search-parent-field label {
   min-width: 255px;
   max-width: 1050px;
   border-radius: 6px;
-  border: 1px solid #ccd0d4;
+  border: 1px solid #e5e5e5;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   background: #fff;
 }
@@ -327,10 +327,6 @@ tr.bp-search-parent-field label {
 .bp-admin-card .form-table td p {
   color: #999;
   margin-top: 6px;
-}
-
-.bp-admin-card .form-table td a.button-secondary {
-  margin-top: 1px;
 }
 
 .bp-admin-card h2 {
@@ -393,10 +389,6 @@ tr.bp-search-parent-field label {
   background-image: url(../../images/admin/icons/fontawesome/solid/search.svg);
 }
 
-.bp-admin-card.section-bp_profile_list_settings h2:before {
-  background-image: url(../../images/admin/icons/fontawesome/solid/list-alt.svg);
-}
-
 /* Activity */
 .bp-admin-card.section-bp_activity h2:before {
   background-image: url(../../images/admin/icons/buddyboss/activity.svg);
@@ -429,10 +421,6 @@ tr.bp-search-parent-field label {
   background-image: url(../../images/admin/icons/fontawesome/solid/layer-group.svg);
 }
 
-.bp-admin-card.section-bp_group_list_settings h2:before {
-  background-image: url(../../images/admin/icons/fontawesome/solid/list-alt.svg);
-}
-
 /* Connections */
 .bp-admin-card.section-bp_friends h2:before {
   background-image: url(../../images/admin/icons/fontawesome/solid/user-friends.svg);
@@ -446,9 +434,7 @@ tr.bp-search-parent-field label {
 .bp-admin-card.section-bbp_settings_per_rss_page h2:before,
 .bp-admin-card.section-bbp_settings_root_slugs h2:before,
 .bp-admin-card.section-bbp_settings_single_slugs h2:before,
-.bp-admin-card.section-bbp_settings_user_slugs h2:before,
-.bp-admin-card.section-bbp_settings_buddypress h2:before,
-.bp-admin-card.section-bbp_settings_akismet h2:before {
+.bp-admin-card.section-bbp_settings_buddypress h2:before {
   background-image: url(../../images/admin/icons/buddyboss/forums.svg);
   background-size: 21px 21px;
 }
@@ -517,8 +503,7 @@ body.buddyboss_page_bbp-converter .bp-admin-card h2:before,
 .bp-admin-card.section-bp_ld-integration h2:before,
 .bp-admin-card.section-bp_ld_sync-buddypress h2:before,
 .bp-admin-card.section-bp_ld_sync-learndash h2:before,
-.bp-admin-card.section-bp_ld_sync-reports h2:before,
-.bp-admin-card.section-bp_ld_course_tab-buddypress h2:before {
+.bp-admin-card.section-bp_ld_sync-reports h2:before {
   background-image: url(../../images/admin/icons/logos/learndash.png);
   background-size: 100% 100%;
 }
@@ -990,7 +975,7 @@ body.post-type-bp-email .categorydiv label {
 .bp-help-card-grid .bp-help-card {
   margin: 0 10px 2%;
   background-color: #fff;
-  border: 1px solid #ccd0d4;
+  border: 1px solid #e5e5e5;
   border-radius: 5px;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   box-sizing: border-box;
@@ -1024,7 +1009,7 @@ body.post-type-bp-email .categorydiv label {
   max-width: 1050px;
   background-color: #fff;
   border-radius: 6px;
-  border: 1px solid #ccd0d4;
+  border: 1px solid #e5e5e5;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
   box-sizing: border-box;
 }
@@ -1186,7 +1171,7 @@ body.post-type-bp-email .categorydiv label {
   .bp-help-sidebar {
     background: #f9f9f9;
     padding: 2.5em;
-    border-left: 1px solid #ccd0d4;
+    border-left: 1px solid #eaeaea;
     border-radius: 0 6px 6px 0;
     -webkit-box-flex: 0;
     -ms-flex: 0 0 200px;
@@ -1203,9 +1188,6 @@ body.post-type-bp-email .categorydiv label {
     flex: 1;
     min-width: 0;
   }
-  .bp-help-content th:first-child {
-    width: 40%;
-  }
 }
 
 @media screen and (max-width: 781px) {
@@ -1218,15 +1200,12 @@ body.post-type-bp-email .categorydiv label {
     padding: 2.5em;
     width: 100%;
     min-height: auto;
-    border-bottom: 1px solid #ccd0d4;
+    border-bottom: 1px solid #eaeaea;
     border-radius: 6px 6px 0 0;
   }
   .bp-help-content {
     padding: 2.5em;
     width: 100%;
-  }
-  .bp-help-content th:last-child {
-    display: none;
   }
 }
 
